# ydict

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.in  README  README.md  Youdao  aclocal.m4  configure  configure.ac  mainwindow.py  setup.py  ydict.py
app/: YDict.desktop.in  YDict.qml
app/components/: OrangeLabel.qml
app/ui/: BasicField.qml  CMakeLists.txt  InputField.qml
autom4te.cache/: output.0  requests  traces.0
backend/: CMakeLists.txt
backend/modules/YDict/: qmldir  youdaoquery.cpp  youdaoquery.h
cmake/: Click.cmake
data/: ydict.desktop
po/: LINGUAS  POTFILES.in  YDict.pot  en_US.po  missing  ydict.pot  zh_CN.mo  zh_CN.po
pydict/: about.py  api.py  config.py  http.py  i18n.py  log.py  preference.py  window.py
pydict/baidu/: __init__.py  config.py  data.py
pydict/base/: __init__.py  config.py  data.py
pydict/glosbe/: __init__.py  config.py  data.py
pydict/youdao/: __init__.py  config.py  data.py
src/: Makefile  Makefile.am  Makefile.in  ydict.py
src/youdao_dict/: Makefile  Makefile.am  Makefile.in  __init__.py  aboutdialog.py  clipboard.py  config.py  history.py  historydialog.py  i18n.py  local.py  mainwindow.py  query.py
ubuntu/: manifest.json.in
ubuntu/app/: CMakeLists.txt  YDict.qml
ubuntu/app/components/: CMakeLists.txt  GreyLabel.qml  OrangeButton.qml  OrangeTextField.qml
ubuntu/app/tests/: popover.qml
ubuntu/app/tests/autopilot/: run
ubuntu/app/tests/autopilot/YDict/main/: test_main.py
ubuntu/app/ui/: BasicField.qml
ubuntu/backend/modules/YDict/: backend.cpp  backend.h  youdaoquery.cpp
ubuntu/po/: CMakeLists.txt  YDict.pot
