## Process this file with automake to produce Makefile.in
## Created by Anjuta



## Directory where .class files will be installed
youdao_dictdir = $(pythondir)/youdao_dict


youdao_dict_PYTHON = \
	mainwindow.py \
	aboutdialog.py \
	query.py \
	i18n.py \
	history.py \
	clipboard.py \
	config.py \
	__init__.py



# Remove ui directory on uninstall
uninstall-local:

	-rm -r $(pkgdatadir)
